// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateFrequencySelect Does not save changed settings when user hits Cancel 1`] = `
<div
  className="frequency-item"
>
  <div>
    <span
      className="content-3 t-d-gray"
    >
      Update 
    </span>
    <span
      className="content-3 ml-1 t-f-blue test-modal-button"
      onClick={[Function]}
    >
      manual
    </span>
  </div>
  <div
    className="content-4 t-m-gray"
  >
    Checked 
    2d ago
  </div>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransitionTimeout={150}
    className="modal-dialog"
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransitionTimeout={300}
    toggle={[Function]}
    zIndex={1050}
  >
    <ModalHeader
      className="dialog-header"
      tag="h4"
      toggle={[Function]}
      wrapTag="div"
    >
      <span
        className="title-4 t-d-gray"
      >
        SYNC SETTINGS
      </span>
    </ModalHeader>
    <ModalBody
      className="dialog-body"
      tag="div"
    >
      <FormGroup
        tag="div"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-3"
          >
            <div
              className="action-button auto-button button-gray"
              onClick={[Function]}
            >
              On
            </div>
          </div>
          <div
            className="col-sm-9"
          >
            <div
              className="info-2"
            >
              Automatically save the current version of the workflow and update it with the newest data.
            </div>
            <Label
              className="content-3 t-d-gray mt-4 mb-2"
              for="updateFreq"
              tag="label"
            >
              Check for update every
            </Label>
            <div
              className="update-freq-settings update-freq-test-class mb-5"
            >
              <Input
                className="number-field t-d-gray content-2"
                id="updateFreqNum"
                max="500"
                min="1"
                name="updateFreq"
                onChange={[Function]}
                tag="p"
                type="number"
                value={5}
              />
              <Input
                className="ml-3 input-dropdown"
                id="updateFreqUnit"
                name="updateFreq"
                onChange={[Function]}
                tag="p"
                type="select"
                value="minutes"
              >
                <option>
                  minutes
                </option>
                <option>
                  hours
                </option>
                <option
                  id="days-option"
                >
                  days
                </option>
                <option>
                  weeks
                </option>
              </Input>
            </div>
          </div>
        </div>
        <div
          className="row d-flex align-items-center"
        >
          <div
            className="col-sm-3"
          >
            <div
              className="action-button manual-button button-blue--fill"
              onClick={[Function]}
            >
              Off
            </div>
          </div>
          <div
            className="col-sm-9"
          >
            <div
              className="info-2"
            >
              Check for new data manually.
            </div>
          </div>
        </div>
      </FormGroup>
    </ModalBody>
    <ModalFooter
      className="dialog-footer"
      tag="div"
    >
      <div
        className="action-button button-gray test-cancel-button mr-4"
        onClick={[Function]}
      >
        Cancel
      </div>
      <div
        className="action-button button-blue test-ok-button"
        onClick={[Function]}
      >
        Apply
      </div>
    </ModalFooter>
  </Modal>
</div>
`;

exports[`UpdateFrequencySelect Renders correctly when in Private mode and changes are confirmed with OK 1`] = `
<div
  className="frequency-item"
>
  <div>
    <span
      className="content-3 t-d-gray"
    >
      Update 
    </span>
    <span
      className="content-3 ml-1 t-f-blue test-modal-button"
      onClick={[Function]}
    >
      manual
    </span>
  </div>
  <div
    className="content-4 t-m-gray"
  >
    Checked 
    2d ago
  </div>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransitionTimeout={150}
    className="modal-dialog"
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransitionTimeout={300}
    toggle={[Function]}
    zIndex={1050}
  >
    <ModalHeader
      className="dialog-header"
      tag="h4"
      toggle={[Function]}
      wrapTag="div"
    >
      <span
        className="title-4 t-d-gray"
      >
        SYNC SETTINGS
      </span>
    </ModalHeader>
    <ModalBody
      className="dialog-body"
      tag="div"
    >
      <FormGroup
        tag="div"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-3"
          >
            <div
              className="action-button auto-button button-gray"
              onClick={[Function]}
            >
              On
            </div>
          </div>
          <div
            className="col-sm-9"
          >
            <div
              className="info-2"
            >
              Automatically save the current version of the workflow and update it with the newest data.
            </div>
            <Label
              className="content-3 t-d-gray mt-4 mb-2"
              for="updateFreq"
              tag="label"
            >
              Check for update every
            </Label>
            <div
              className="update-freq-settings update-freq-test-class mb-5"
            >
              <Input
                className="number-field t-d-gray content-2"
                id="updateFreqNum"
                max="500"
                min="1"
                name="updateFreq"
                onChange={[Function]}
                tag="p"
                type="number"
                value={5}
              />
              <Input
                className="ml-3 input-dropdown"
                id="updateFreqUnit"
                name="updateFreq"
                onChange={[Function]}
                tag="p"
                type="select"
                value="minutes"
              >
                <option>
                  minutes
                </option>
                <option>
                  hours
                </option>
                <option
                  id="days-option"
                >
                  days
                </option>
                <option>
                  weeks
                </option>
              </Input>
            </div>
          </div>
        </div>
        <div
          className="row d-flex align-items-center"
        >
          <div
            className="col-sm-3"
          >
            <div
              className="action-button manual-button button-blue--fill"
              onClick={[Function]}
            >
              Off
            </div>
          </div>
          <div
            className="col-sm-9"
          >
            <div
              className="info-2"
            >
              Check for new data manually.
            </div>
          </div>
        </div>
      </FormGroup>
    </ModalBody>
    <ModalFooter
      className="dialog-footer"
      tag="div"
    >
      <div
        className="action-button button-gray test-cancel-button mr-4"
        onClick={[Function]}
      >
        Cancel
      </div>
      <div
        className="action-button button-blue test-ok-button"
        onClick={[Function]}
      >
        Apply
      </div>
    </ModalFooter>
  </Modal>
</div>
`;

exports[`UpdateFrequencySelect Renders correctly when in Private mode and changes are confirmed with OK 2`] = `
<div
  className="frequency-item"
>
  <div>
    <span
      className="content-3 t-d-gray"
    >
      Update 
    </span>
    <span
      className="content-3 ml-1 t-f-blue test-modal-button"
      onClick={[Function]}
    >
      manual
    </span>
  </div>
  <div
    className="content-4 t-m-gray"
  >
    Checked 
    2d ago
  </div>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransitionTimeout={150}
    className="modal-dialog"
    fade={true}
    isOpen={true}
    keyboard={true}
    modalTransitionTimeout={300}
    toggle={[Function]}
    zIndex={1050}
  >
    <ModalHeader
      className="dialog-header"
      tag="h4"
      toggle={[Function]}
      wrapTag="div"
    >
      <span
        className="title-4 t-d-gray"
      >
        SYNC SETTINGS
      </span>
    </ModalHeader>
    <ModalBody
      className="dialog-body"
      tag="div"
    >
      <FormGroup
        tag="div"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-3"
          >
            <div
              className="action-button auto-button button-gray"
              onClick={[Function]}
            >
              On
            </div>
          </div>
          <div
            className="col-sm-9"
          >
            <div
              className="info-2"
            >
              Automatically save the current version of the workflow and update it with the newest data.
            </div>
            <Label
              className="content-3 t-d-gray mt-4 mb-2"
              for="updateFreq"
              tag="label"
            >
              Check for update every
            </Label>
            <div
              className="update-freq-settings update-freq-test-class mb-5"
            >
              <Input
                className="number-field t-d-gray content-2"
                id="updateFreqNum"
                max="500"
                min="1"
                name="updateFreq"
                onChange={[Function]}
                tag="p"
                type="number"
                value={5}
              />
              <Input
                className="ml-3 input-dropdown"
                id="updateFreqUnit"
                name="updateFreq"
                onChange={[Function]}
                tag="p"
                type="select"
                value="minutes"
              >
                <option>
                  minutes
                </option>
                <option>
                  hours
                </option>
                <option
                  id="days-option"
                >
                  days
                </option>
                <option>
                  weeks
                </option>
              </Input>
            </div>
          </div>
        </div>
        <div
          className="row d-flex align-items-center"
        >
          <div
            className="col-sm-3"
          >
            <div
              className="action-button manual-button button-blue--fill"
              onClick={[Function]}
            >
              Off
            </div>
          </div>
          <div
            className="col-sm-9"
          >
            <div
              className="info-2"
            >
              Check for new data manually.
            </div>
          </div>
        </div>
      </FormGroup>
    </ModalBody>
    <ModalFooter
      className="dialog-footer"
      tag="div"
    >
      <div
        className="action-button button-gray test-cancel-button mr-4"
        onClick={[Function]}
      >
        Cancel
      </div>
      <div
        className="action-button button-blue test-ok-button"
        onClick={[Function]}
      >
        Apply
      </div>
    </ModalFooter>
  </Modal>
</div>
`;

exports[`UpdateFrequencySelect Renders correctly when in Private mode and changes are confirmed with OK 3`] = `
<div
  className="frequency-item"
>
  <div>
    <span
      className="content-3 t-d-gray"
    >
      Update 
    </span>
    <span
      className="content-3 ml-1 t-f-blue test-modal-button"
      onClick={[Function]}
    >
      auto
    </span>
  </div>
  <div
    className="content-4 t-m-gray"
  >
    Checked 
    2d ago
  </div>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransitionTimeout={150}
    className="modal-dialog"
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransitionTimeout={300}
    toggle={[Function]}
    zIndex={1050}
  >
    <ModalHeader
      className="dialog-header"
      tag="h4"
      toggle={[Function]}
      wrapTag="div"
    >
      <span
        className="title-4 t-d-gray"
      >
        SYNC SETTINGS
      </span>
    </ModalHeader>
    <ModalBody
      className="dialog-body"
      tag="div"
    >
      <FormGroup
        tag="div"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-3"
          >
            <div
              className="action-button auto-button button-blue--fill"
              onClick={[Function]}
            >
              On
            </div>
          </div>
          <div
            className="col-sm-9"
          >
            <div
              className="info-2"
            >
              Automatically save the current version of the workflow and update it with the newest data.
            </div>
            <Label
              className="content-3 t-d-gray mt-4 mb-2"
              for="updateFreq"
              tag="label"
            >
              Check for update every
            </Label>
            <div
              className="update-freq-settings update-freq-test-class mb-5"
            >
              <Input
                className="number-field t-d-gray content-2"
                id="updateFreqNum"
                max="500"
                min="1"
                name="updateFreq"
                onChange={[Function]}
                tag="p"
                type="number"
                value={888}
              />
              <Input
                className="ml-3 input-dropdown"
                id="updateFreqUnit"
                name="updateFreq"
                onChange={[Function]}
                tag="p"
                type="select"
                value="days"
              >
                <option>
                  minutes
                </option>
                <option>
                  hours
                </option>
                <option
                  id="days-option"
                >
                  days
                </option>
                <option>
                  weeks
                </option>
              </Input>
            </div>
          </div>
        </div>
        <div
          className="row d-flex align-items-center"
        >
          <div
            className="col-sm-3"
          >
            <div
              className="action-button manual-button button-gray "
              onClick={[Function]}
            >
              Off
            </div>
          </div>
          <div
            className="col-sm-9"
          >
            <div
              className="info-2"
            >
              Check for new data manually.
            </div>
          </div>
        </div>
      </FormGroup>
    </ModalBody>
    <ModalFooter
      className="dialog-footer"
      tag="div"
    >
      <div
        className="action-button button-gray test-cancel-button mr-4"
        onClick={[Function]}
      >
        Cancel
      </div>
      <div
        className="action-button button-blue test-ok-button"
        onClick={[Function]}
      >
        Apply
      </div>
    </ModalFooter>
  </Modal>
</div>
`;
